# Linux_Online_chat_room

./: .gitignore  CMakeLists.txt  README.md
docs/: 基于Linux的Web聊天室系统设计方案文档(1).md  项目整体框架：C  _Linux_ _WebSocket_架构解析.md
server/: Client.h  EpollServer.cpp  EpollServer.h  ThreadPool.cpp  ThreadPool.h  WebSocket.cpp  WebSocket.h  main.cpp
web/: client.js  index.html  style.css
